Fixed alignment on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
   margin: 0 auto;
-  text-align: end;
+  text-align: center;
 }
 
 h1, h3, p {
